--- a/src/index.html
+++ b/src/index.html
@@ -63,13 +63,16 @@
             </div>
         </div>
         <div class="sidebar-nav-projects">
-            <div class="sidebar-nav-projects-header">Projects</div>
+            <div class="sidebar-nav-projects-header">
+                <button id="show-all-projects">Projects</button>
+            </div>
             <div class="nav-projects-add">
                 <button id="new-project">
                     <span class="material-symbols-outlined">add_circle</span>
                     <div class="item-header">Add Project</div>
                 </button>
             </div>
+            <div class="projects-container"></div>
         </div>
     </div>
 
