Fix opening and closing dialog elements

--- a/src/index.html
+++ b/src/index.html
@@ -120,12 +120,14 @@
     </dialog>
 
     <dialog id="confirm-project-delete">
-        <div class="confirm-header">Confirm Deletion</div>
-        <div class="confirm-question">Are you sure you want to delete this project and all its associated tasks?</div>
-        <div class="confirm-message">This action cannot be undone.</div>
-        <div class="dialog-buttons">
-            <button id="cancel-delete">Cancel</button>
-            <button id="confirm-delete">Delete Project</button>
+        <div class="confirm-delete-container">
+            <div class="confirm-header">Confirm Deletion</div>
+            <div class="confirm-question">Are you sure you want to delete this project and all its associated tasks?</div>
+            <div class="confirm-message">This action cannot be undone.</div>
+            <div class="dialog-buttons">
+                <button id="cancel-delete">Cancel</button>
+                <button id="confirm-delete">Delete Project</button>
+            </div>
         </div>
     </dialog>
 </body>
