Implement full project functionality and design

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.5.95/css/materialdesignicons.min.css">
     <title>Just Doist</title>
 </head>
 <body>
+    <button id="menu-toggle">
+        <span class="material-symbols-outlined">menu</span>
+    </button>
     <div class="sidebar">
         <div class="sidebar-logo">
             <img alt="Just Doist Icon">
             <div class="sidebar-header">Just Doist</div>
+            <button id="close-menu">
+                <span class="material-symbols-outlined">close</span>
+            </button>
         </div>
         <div class="sidebar-nav">
             <div class="sidebar-nav-item">
